# MYpostman-APP

./: .env.example  README.md  docker-compose.yml  package-lock.json
.github/workflows/: cd.yml  ci.yml
Backend/: Dockerfile  README.md  database.sql  moderation_rules.json  package-lock.json  package.json  server.js
Backend/RAG-local/: pyproject.toml  requirements.txt
Backend/RAG-local/RAG-folder/: community-guidelines.md  top-posts-archive.json
Backend/RAG-local/notebook/: documents.ipynb
Backend/RAG-local/notebook/vector_store/: chroma.sqlite3
Backend/controllers/: authController.js  postController.js  refreshTokenController.js
Backend/middleware/: rateLimiter.js  refreshToken.js
Backend/routes/: auth.js  dashboard.js  posts.js
Backend/services/: moderationService.js
Frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
Frontend/src/: App.jsx  support_agent.jsx
Frontend/src/components/: support_agent.jsx
Frontend/src/constants/: index.js
MYpostman-FullStack/Backend/: db.js  package-lock.json  server.js
MYpostman-FullStack/Backend/controllers/: authController.js  dashboardController.js  moderationLogController.js  postController.js  userController.js
MYpostman-FullStack/Backend/middleware/: authMiddleware.js
MYpostman-FullStack/Backend/routes/: auth.js  moderationLogs.js  posts.js  user.js
SupportAgent/: app.py  index.html  intent_classifier.py  intent_classifier_model.h5  label_encoder.json  lstm_predictor.py  requirements.txt  support_agent_model.json  tokenizer.json  train_intent_model.py
(+32 files in other folders)
