[project]
name = "rag-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
]
